fix overlap

--- a/src/components/SiteHeader.module.scss
+++ b/src/components/SiteHeader.module.scss
@@ -7,6 +7,8 @@
 }
 
 .header {
+  position: relative;
+  z-index: 99;
   padding: 1rem 2rem;
   background-color: rgb(216 216 216);
   border-bottom-left-radius: 1rem;
@@ -33,7 +35,6 @@
     inset: 0;
     border-radius: 0;
     transition: opacity 250ms ease-in-out;
-    z-index: 99;
     opacity: 0;
     pointer-events: none;
 
